Preventing scrolling on mobile devices

--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     background: #8b1a1a;
     margin: 0;
     overflow-y: hidden;
+	width: 100%;
+	height: 100%;
+	position: fixed;
 }
 
 
